--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,328 @@
 /* ********* */
 
 *, *::after, *::before {
-   box-sizing:border-box;  
+   box-sizing:border-box;     
+}
+
+button:not([disabled]), summary {
+   cursor:pointer;
+}
+
+
+/* ************ */
+/* Manual Reset */
+/* ************ */
+
+h1 {
+   padding: 0;
+   margin: 0;
+}
+
+h2 {
+   padding: 0;
+   margin: 0;
+}
+
+p {
+   padding: 0;
+   margin: 0;
+}
+
+ul {
+   padding: 0;
+   margin: 0;
+}
+
+
+
+
+
+
+
+/* ***** */
+/* Fonts */
+/* ***** */
+
+@font-face {
+   font-family: 'SuisseIntl';
+
+   src: url('../assets/fonts/SuisseIntl-Regular.woff2') format('woff2');
+
+   font-style: normal;
  }
- 
- button:not([disabled]), summary {
-    cursor:pointer;
+
+ @font-face {
+   font-family: 'Suisse Works';
+
+   src: url('../assets/fonts/SuisseWorks-Regular.woff2') format('woff2');
+
+   font-style: normal
  }
+
+
+
+
+
+
+
+
+/* ***************** */
+/* Custom Properties */
+/* ***************** */
+
+:root {
+   --primary-font-family: 'SuisseIntl';
+   --secondary-font-family: 'Suisse Works';
+   
+   --primary-text-color: white;
+   --secondary-text-color: #868686;
+
+   --h1-font-size: clamp(5.6rem, 12vw, 15rem);
+
+   --h2-font-size: clamp(3rem, 4vw, 3rem);
+
+   --p-font-size: clamp(3rem, 4vw, 3rem);
+
+   --li-font-size: clamp(3rem, 4vw, 3rem);
+
+   --XS-spacer: 1rem;
+   --S-spacer: 2rem;
+   --M-spacer: 4rem;
+   --L-spacer: 8rem;
+   --XL-spacer: 16rem;
+   --XXL-spacer: 24rem;
+}
+
+
+
+
+
+
+
+
+/* *********** */
+/* Html , Body */
+/* *********** */
+
+html, body {
+   font-size: 62.5%; /* Zodat 1 rem 10px is. */
+}
+
+/* **** */
+/* Body */
+/* **** */
+
+body {
+   margin: 0;
+
+   height: 100dvh;
+}
+
+
+
+
+/* ****** */
+/* Header */
+/* ****** */
+
+header {
+   --header-bg-color: black;
+
+   padding-bottom: var(--M-spacer);
+
+   width: 100%;
+
+   background-color: var(--header-bg-color);
+}
+
+header h1 {
+   padding: var(--M-spacer);
+
+   font-family: var(--primary-font-family);
+   font-size: var(--h1-font-size);
+
+   letter-spacing: 3.5px;
+   
+   color: var(--primary-text-color);
+}
+
+
+/* **** */
+/* Main */
+/* **** */
+
+main {
+   --main-bg-color: black;
+
+   width: 100%;
+   
+   background-color: var(--main-bg-color);
+}
+
+
+
+/* ************** */
+/* Main > Section */
+/* ************** */
+
+main > section {
+   width: 100%;
+}
+
+/* ************ */
+/* Afbeeldingen */
+/* ************ */
+
+main > section > section:has(figure) {
+   padding-bottom: var(--L-spacer);
+}
+
+main > section > section:has(figure) figure {
+   overflow: hidden;
+
+   padding: 0;
+   margin: 0;
+
+   width: 100%;
+   height: auto;
+}
+
+main > section > section:has(figure) figure img {
+   display: block;
+
+   width: 100%;
+   height: 100%;
+
+   object-fit: contain;
+   object-position: center;
+}
+
+
+/* ************************ */
+/* Main > Section > Section */
+/* ************************ */
+
+
+/* Lijst met vragen die we moeten beantwoorden. */
+
+main > section > section {
+   padding-bottom: var(--XL-spacer);
+
+   width: 100%;
+}
+
+
+
+
+
+/* Vragen */
+
+main > section > section h2 {
+   padding-bottom: var(--XS-spacer);
+
+   font-family: var(--primary-font-family);
+   font-size: var(--h2-font-size);
+
+   color: var(--secondary-text-color);
+}
+
+
+/* Manier van antwoorden, met opsomming */
+
+main > section > section ul {
+   list-style: none;
+
+   display: flex;
+   flex-direction: column;
+
+   gap: var(--S-spacer);
+
+   width: 100%;
+}
+
+main > section > section ul li {
+   padding: 0;
+
+   font-family: var(--primary-font-family);
+   font-size: var(--li-font-size);
+   color: var(--primary-text-color);
+}
+
+/* Manier van antwoorden, met beschrijving */
+
+main > section > section p {
+   font-family: var(--primary-font-family);
+   font-size: var(--p-font-size);
+
+   line-height: 1.6;
+
+   color: var(--primary-text-color);
+}
+
+
+
+/* ****** */
+/* Footer */
+/* ****** */
+
+footer {
+   --footer-bg-color: black;
+
+   width: 100%;
+   
+   background-color: var(--footer-bg-color);
+}
+
+footer ol {
+   padding: 0;
+   margin: 0;
+
+   display: flex;
+   flex-direction: column;
+
+   gap: var(--XS-spacer);
+}
+
+footer ol li a {
+   font-family: var(--primary-font-family);
+   font-size: var(--li-font-size);
+
+   color: var(--primary-text-color);
+}
+
+
+
+
+@media (min-width: 768px) {
+
+   /* ************** */
+   /* Main > Section */
+   /* ************** */
+
+   main > section {
+      display: grid;
+
+      grid-template-columns: repeat(12, 1fr);
+   }
+
+   /* ************ */
+   /* Afbeeldingen */
+   /* ************ */
+
+   main > section > section:has(figure) {
+      grid-column: 1 / -1;
+   }
+
+
+   /* ************************ */
+   /* Main > Section > Section */
+   /* ************************ */
+
+
+   /* Lijst met vragen die we moeten beantwoorden. */
+
+   main > section > section {
+      grid-column: 6 / 13;
+   }
+
+}
