--- a/css/metaphor.css
+++ b/css/metaphor.css
@@ -1,3 +1,27 @@
+:root {
+   --primary-font-family: 'Open Sans', sans-serif;
+   --secondary-font-family: 'Open Sans', sans-serif;
+
+   --primary-text-color: white;
+   --secondary-text-color: #868686;
+
+   --h1-font-size: clamp(5.6rem, 12vw, 15rem);
+
+   --h2-font-size: clamp(3rem, 4vw, 3rem);
+
+   --p-font-size: clamp(3rem, 4vw, 3rem);
+
+   --li-font-size: clamp(3rem, 4vw, 3rem);
+
+   --XS-spacer: 1rem;
+   --S-spacer: 2rem;
+   --M-spacer: 4rem;
+   --L-spacer: 8rem;
+   --XL-spacer: 16rem;
+   --XXL-spacer: 24rem;
+}
+
+
 *, html {
    margin: 0;
    padding: 0;
@@ -10,13 +34,48 @@ body {
    height: 100dvh;
 }
 
+
+/* *** */
+/* Nav */
+/* *** */
+
+nav {
+   z-index: 99;
+
+   padding: var(--S-spacer);
+
+   position: fixed;
+
+   width: 100%;
+}
+
+
+nav ul {
+   display: flex;
+
+   justify-content: flex-end;
+
+   width: 100%;
+}
+
+nav ul li a {
+   --nav-a-font-size: clamp(3rem, 4vw, 3rem);
+
+   font-family: var(--primary-font-family);
+   font-size: var(--nav-a-font-size);
+
+   text-decoration: none;
+
+   color: var(--primary-text-color);
+}
+
 main {
    --main-bg-color: black;
 
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
 
-   place-content: center;
+   place-items: center;
 
    width: 100%;
    height: 100%;
@@ -28,6 +87,8 @@ section {
    --section-border-color: white;
    --section-border-thickness: 1px;
    --section-border: var(--section-border-thickness) solid var(--section-border-color);
+
+   opacity: 0.1;
    
    display: grid;
    place-content: center;
@@ -43,6 +104,10 @@ section {
    transform-style: preserve-3d;
 }
 
+section:hover {
+   opacity: 1;
+}
+
 div {
    --door-border-color: white;
    --door-border-thickness: 1px;
@@ -53,7 +118,7 @@ div {
    top: 50%;
    left: 50%;
    
-   width: 25vw;
+   width: 30vmin;
    aspect-ratio: 1.6/1;
 
    border: var(--door-border);
@@ -64,19 +129,19 @@ div {
 }
 
 section:first-of-type div:nth-of-type(1){
-   animation: rotateDoor1 4s infinite linear;
+   animation: rotateDoor1 15s infinite linear;
 }
 
 section:first-of-type div:nth-of-type(2) {
-   animation: rotateDoor2 4s infinite linear;
+   animation: rotateDoor2 15s infinite linear;
 }
 
 section:nth-of-type(2) div:nth-of-type(1) {
-   animation: rotateDoor1 8s infinite linear;
+   animation: rotateDoor1 4s infinite linear;
 }
 
 section:nth-of-type(2) div:nth-of-type(2) {
-   animation: rotateDoor2 8s infinite linear;
+   animation: rotateDoor2 4s infinite linear;
 }
 
 section:first-of-type div:nth-of-type(2),
@@ -104,12 +169,11 @@ section:nth-of-type(2) div:nth-of-type(1)::before {
    bottom: 0;
    left: 1.5em;
    aspect-ratio: 1/1;
-   border-radius: .5em;
    background-color: #cccccc;
 }
 
 section:nth-of-type(3) div:nth-of-type(2) {
-   width: 10vw;
+   width: 12vmin;
    aspect-ratio: 1/1.55;
    border: 2px solid white;  
 }
@@ -132,7 +196,6 @@ section:nth-of-type(3) div:nth-of-type(2)::before {
    bottom: .8em;
    left: 1.2em;
    aspect-ratio: 1/1;
-   border-radius: .5em;
    background-color: white;
 }
 
