--- a/css/style.css
+++ b/css/style.css
@@ -45,22 +45,6 @@ ul {
 /* Fonts */
 /* ***** */
 
-@font-face {
-   font-family: 'SuisseIntl';
-
-   src: url('../assets/fonts/SuisseIntl-Regular.woff2') format('woff2');
-
-   font-style: normal;
- }
-
- @font-face {
-   font-family: 'Suisse Works';
-
-   src: url('../assets/fonts/SuisseWorks-Regular.woff2') format('woff2');
-
-   font-style: normal
- }
-
 
 
 
@@ -72,10 +56,11 @@ ul {
 /* Custom Properties */
 /* ***************** */
 
+
 :root {
-   --primary-font-family: 'SuisseIntl';
-   --secondary-font-family: 'Suisse Works';
-   
+   --primary-font-family: 'Open Sans', sans-serif;
+   --secondary-font-family: 'Open Sans', sans-serif;
+
    --primary-text-color: white;
    --secondary-text-color: #868686;
 
@@ -123,6 +108,41 @@ body {
 
 
 
+/* *** */
+/* Nav */
+/* *** */
+
+nav {
+   padding: var(--S-spacer);
+
+   position: fixed;
+
+   width: 100%;
+}
+
+
+nav ul {
+   display: flex;
+
+   justify-content: flex-end;
+
+   width: 100%;
+}
+
+nav ul li a {
+   --nav-a-font-size: clamp(3rem, 4vw, 3rem);
+
+   font-family: var(--primary-font-family);
+   font-size: var(--nav-a-font-size);
+
+   text-decoration: none;
+
+   color: var(--primary-text-color);
+}
+
+
+
+
 /* ****** */
 /* Header */
 /* ****** */
@@ -142,8 +162,10 @@ header h1 {
 
    font-family: var(--primary-font-family);
    font-size: var(--h1-font-size);
+   font-style: normal;
+   font-weight: 500;
 
-   letter-spacing: 3.5px;
+   letter-spacing: -1px;
    
    color: var(--primary-text-color);
 }
@@ -226,6 +248,9 @@ main > section > section h2 {
    font-size: var(--h2-font-size);
 
    color: var(--secondary-text-color);
+
+   font-style: normal;
+   font-weight: 500;
 }
 
 
@@ -248,6 +273,9 @@ main > section > section ul li {
    font-family: var(--primary-font-family);
    font-size: var(--li-font-size);
    color: var(--primary-text-color);
+
+   font-style: normal;
+   font-weight: 500;
 }
 
 /* Manier van antwoorden, met beschrijving */
@@ -324,7 +352,7 @@ footer ol li a {
    /* Lijst met vragen die we moeten beantwoorden. */
 
    main > section > section {
-      grid-column: 6 / 13;
+      grid-column: 5 / 13;
    }
 
 }
